<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_coins">

    <action
        android:id="@+id/action_nav_crypto_coins_to_nav_crypto_coin_details"
        app:destination="@id/nav_crypto_coin_details" />

    <fragment
        android:id="@+id/nav_coins"
        android:name="com.oukachkosnt.coins.ui.coins.CryptoCoinsFragment"
        android:label="@string/drawer_coins" >
    </fragment>

    <fragment
        android:id="@+id/nav_news"
        android:name="com.oukachkosnt.coins.ui.news.NewsListFragment"
        android:label="@string/coins_news_share_title" >
    </fragment>

    <fragment
        android:id="@+id/nav_market_stats"
        android:name="com.oukachkosnt.coins.ui.stats.MarketStatsFragment"
        android:label="@string/market_cap_share_history_title" >
    </fragment>

    <fragment
        android:id="@+id/nav_converter"
        android:name="com.oukachkosnt.coins.ui.converter.ConverterFragment"
        android:label="@string/drawer_converter" >
    </fragment>

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.oukachkosnt.coins.ui.alerts.AlertsFragment"
        android:label="@string/drawer_alerts">
        <action
            android:id="@+id/action_nav_alerts_to_nav_create_alert"
            app:destination="@id/nav_create_alert" />
    </fragment>

    <activity
        android:id="@+id/nav_crypto_coin_details"
        android:name="com.oukachkosnt.coins.ui.coins.details.CoinDetailsPagesActivity"
        android:label="@string/details_tab_title">
        <argument
            android:name="coinData"
            app:argType="com.oukachkosnt.coins.data.domain.CryptoCoinData"
            app:nullable="false"/>
    </activity>

    <activity
        android:id="@+id/nav_create_alert"
        android:name="com.oukachkosnt.coins.ui.alerts.create.CreateAlertActivity"
        android:label="@string/title_activity_create_alert">
    </activity>
</navigation>